RESOLVED FIXED 284054
[WGSL] webgpu:shader,validation,types,array:valid:* is failing
https://bugs.webkit.org/show_bug.cgi?id=284054
Summary [WGSL] webgpu:shader,validation,types,array:valid:* is failing
Tadeu Zagallo
Reported 2024-12-04 10:41:26 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2024-12-04 10:41:42 PST
Tadeu Zagallo
Comment 2 2024-12-04 10:46:23 PST
EWS
Comment 3 2024-12-11 08:15:53 PST
Committed 287671@main (a701d779e9a7): <https://commits.webkit.org/287671@main> Reviewed commits have been landed. Closing PR #37445 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.