[WGSL] webgpu:shader,validation,types,array:valid:* is failing https://bugs.webkit.org/show_bug.cgi?id=284054 rdar://140924793

Reviewed by Mike Wyrzykowski.

Fix 2 issues to get the test passing:
- the parser incorrectly reject trailing commas in array types
- the type checker did not recognize the equality of 2 array types that use the
  same override variable as length

* Source/WebGPU/WGSL/Parser.cpp:
(WGSL::Parser<Lexer>::parseArrayType):
* Source/WebGPU/WGSL/TypeCheck.cpp:
(WGSL::TypeChecker::visit):
* Source/WebGPU/WGSL/TypeStore.cpp:
(WGSL::ArrayKey::encode const):
(WGSL::TypeStore::arrayType):

Canonical link: https://commits.webkit.org/287671@main